--- a/CV/2022RT.html
+++ b/CV/2022RT.html
@@ -159,7 +159,7 @@
                     </h5>
                   </div>
                   <p class="lead">
-                   Soy Ramón Tenreiro, escritor, emprendedor, consultor de empresas, docente de formación profesional, promotor inmobiliario y arquitecto, puedo ofrecerle mis servicios, en aquellos campos de su actividad, en el que le añada valor.</p>
+                   Soy Ramón Tenreiro escritor, emprendedor, consultor de empresas, docente de formación profesional, promotor inmobiliario y arquitecto, puedo ofrecerle mis servicios, en aquellos campos de su actividad, en el que le añada valor.</p>
                   <p class="lead">
                    He participado en: la implantación del "Plan Estratégico para el Banco Pastor realizado por <b> McKinsey&Company </b>" (1989), el Estudio "Convertir la oficina Bancaria en un efectivo Punto de Venta" realizada por <b> Price Waterhouse </b> (1993), el Plan Estratégico de CajaCanarias (1994), Planes de marketing CajaCanarias (1991-1992-1993-1994) CajaSegovia (1996-1997-1998-1999), Estudio de Viabilidad de la Empresa Municipal de Servicios de Tres Cantos (2001-2002), Proyecto de Compensación y estudios de desarrollo del AEI-5 del Ayuntamiento de Ferrol (2003-2006), Plan de Empresa Sed.systems SL (2014), Propuestas B2B de marketing digital para Club Natura, El Corte Inglés y GADISA (2014).
 
@@ -250,7 +250,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="work-box">
-            <a href="doc/trabajos/IAparaPintores.pdf">
+            <a href="doc/IAparaPintores.pdf">
               <div class="work-img">
                 <img src="img/PortadaLibro.png" alt="" class="img-fluid">
               </div>
@@ -470,7 +470,7 @@ GRADE: 95,5 % - Duration 9 weeks</p>
               </div>
               <h3 class="card-title">Stanford University - DeepLearning.AI 2024</h3>
               <p class="card-description">
-                The Machine Learning Specialization is a foundational online program created in collaboration between DeepLearning.AI and Stanford Online.It provides a broad introduction to modern machine learning, including supervised learning (multiple linear regression, logistic regression, neural networks, and decision trees), unsupervised learning (clustering, dimensionality reduction, recommender systems), and some of the best practices used in Silicon Valley for artificial intelligence and machine learning innovation (evaluating and tuning models, taking a data-centric approach to improving performance, and more.)</br>GRADE: 96. Duration 12 weeks.</p>
+                The Machine Learning Specialization created in collaboration between DeepLearning.AI and Stanford Online.It provides a broad learn to modern machine learning and some of the best practices used in Silicon Valley for artificial intelligence.</br>GRADE: 96. Duration 12 weeks.</p>
             </div>
           </div>
         </div>
