--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Site of Ramon Tenreiro">
     <meta name="author" content="Ramon Tenreiro">
     <meta property='og:title' content='Ramon Tenreiro | Creations'/>
-    <meta property='og:description' content='Architecture, painting, building, internet, games, tenreiro, ramon'/>
+    <meta property='og:description' content='Architecture, Painting, Building, Internet,Inteligence Artificial, Games, Tenreiro'/>
     <meta property='og:url' content='https://rtenreiro.github.io/'/>
     <meta property='og:site_name' content='Ramon Tenreiro'/>
     <meta property='og:type' content='website'/> 
@@ -192,7 +192,7 @@
       			<div id="slider">
                 <figure>
                 <a href="DASH/dash.html"><img src="img/CW.jpg" alt="Juego Tenreiros"></a>
-                <a href="DASH/dash.html"><img src="img/A.jpg" alt="Asteroides"></a>
+                <a href="DASH/dash.html"><img src="img/PortadaLibro.png" alt="Libro"></a>
                 <a href="DASH/dash.html"><img src="img/SE.jpg" alt="poster panoramic"></a>
                 <a href="DASH/dash.html"><img src="img/SED.jpg" alt="photo crows"></a>
                 <a href="DASH/dash.html"><img src="img/TA.jpg" alt="poster des"></a>
@@ -217,7 +217,7 @@
          <div class="row">
             <div class="col-sm-6 no-space">
                   <div class="grid bgwhite">
-              <div id="caption" data-sr="enter left over 0.6s"><img src="img/sep-gray.gif" alt="separator"><a href="index.html"><img src="img/arrow-gray.png" class="arrow" alt="arrow"></a><h1 class="gray">Creations</h1><span class="gray"><p>Architecture, building, painting, web sites, internet and online games, let's play!</p></span></div>
+              <div id="caption" data-sr="enter left over 0.6s"><img src="img/sep-gray.gif" alt="separator"><a href="index.html"><img src="img/arrow-gray.png" class="arrow" alt="arrow"></a><h1 class="gray">Creations</h1><span class="gray"><p>Architecture, building, painting, web sites, intelligence artificial, internet and online games, let's play!</p></span></div>
                          <img src="img/spacer.png" alt="spacer" class="img-responsive">
               </div>
             </div>
