--- a/DASH/dash.html
+++ b/DASH/dash.html
@@ -41,8 +41,8 @@
                               <i class="fa fa-caret-down"></i>
                             </button>
                             <ul class="dropdown-menu pull-right" role="menu">
-               <li><a href="https://rtenreiro.github.io/index.html"><i class="glyphicon glyphicon-home"></i> Home</a></li>
-               <li><a href="https://rtenreiro.github/CV/2020.html"><i class="glyphicon glyphicon-user"></i>About me</a></li>  
+               <li><a href="https://rtenreiro.github.io"><i class="glyphicon glyphicon-home"></i> Home</a></li>
+               <li><a href="https://rtenreiro.github/CV/2022.html"><i class="glyphicon glyphicon-user"></i>About me</a></li>  
                <li class="divider"></li>
                <li><a href="contact.html"><i class="glyphicon glyphicon-envelope"></i>Stay in Touch</a></li>
                             </ul>
@@ -60,7 +60,7 @@
                 <div class="leftpanel">
                     <h5 class="leftpanel-title" style="margin-top:40px">Cosas a hacer</h5>
                     <ul class="nav nav-pills nav-stacked">
-                        <li><a href="rtenreiro.github.io/index.html"><i class="fa fa-home"></i> <span>Home</span></a></li>
+                        <li><a href="rtenreiro.github.io"><i class="fa fa-home"></i> <span>Home</span></a></li>
                        </a></li>
                         <li><a href="painting.html"><i class="fa fa-image"></i> <span>Painting</span></a>
                             
@@ -79,10 +79,18 @@
  <li><a href="#" onclick="document.getElementById('fra').src = 'architecture.html'">Architecture</a></li>
                       </ul></li>
 
-<li class="parent"><a href=""><i class="fa fa-file-text"></i> <span>Newletters</span></a>
+<li class="parent"><a href=""><i class="fa fa-file-text"></i> <span>Newsletters</span></a>
                             <ul class="children">
 <li><a href="#" onclick="document.getElementById('fra').src = 'NL2.html'">NL2-WEB</a></li>
 <li><a href="#" onclick="document.getElementById('fra').src = 'NL1.html'">NL1-ATB</a></li>
+<li><a href="#" onclick="document.getElementById('fra').src = 'NL3.html'">NL3-HITA</a></li>
+<li><a href="#" onclick="document.getElementById('fra').src = 'NL4.html'">NL4-SEGOVIA</a></li>
+                            </ul>
+                        </li>
+<li class="parent"><a href=""><i class="fa fa-file-text"></i> <span>Published books</span></a>
+                            <ul class="children">
+<li><a href="#" onclick="document.getElementById('fra').src = 'L1.html'">RMT</a></li>
+<li><a href="#" onclick="document.getElementById('fra').src = 'L2.html'">RT</a></li>
                             </ul>
                         </li>
                         
