Update and rename NL1.html to NL3.html

--- a/DASH/NL3.html
+++ b/DASH/NL3.html
@@ -136,7 +136,7 @@
 				</tr>
 <tr style="padding:0">
 <td align="left" valign="top" class="h2" style="border-collapse:collapse;color:#353535;font-family:Helvetica,Arial,sans-serif;font-size:19px;font-weight:bold;letter-spacing:-1px;line-height:24px;padding:0">
-					<span>NL-1</span>
+					<span>NL-3</span>
 					</td></tr></table></td></tr>
 </table>
 
@@ -148,10 +148,9 @@
 			<table cellpadding="0" cellspacing="0" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;">
            <tr>
 <td width="600" valign="top" align="left" style="border-collapse:collapse;color:#787878;line-height:24px;padding:0">
-<h1 style="color:#353535;font-family:Helvetica,Arial,sans-serif;font-weight:bold;font-size:18px;margin-bottom:6px;margin-top:6px;line-height:18px;letter-spacing:-1px;"><span>Serie de Autoretratos del Pintor Antonio Tenreiro Brochón</span></h1>
+<h1 style="color:#353535;font-family:Helvetica,Arial,sans-serif;font-weight:bold;font-size:18px;margin-bottom:6px;margin-top:6px;line-height:18px;letter-spacing:-1px;"><span>Serie Transferencia de Estilo Neuronal - Hita</span></h1>
 							<div><p align="justify" style="margin:1em 0;color:#787878;line-height:16px;">
-								 Para difundir la pintura de mi tio Antonio, he realizado este pequeño gif animado, donde se recojen 11 autoretratos del pintor Antonio Tenreiro Brochón, desde su juventud, con 16 años, hasta el último con 72 años.</br> Todos ellos son óleos y cubren etapas de su edad  también en su estilo.
-							</p></div>
+								 Imagen gif realizada con las imagenes producidas con el algoritmo de transferencia de estilo, de una imagen fotográfica a estilo de pintura. 						</p></div>
 				</td>
 			</tr></table>
 </td>
@@ -173,14 +172,14 @@
 		<!-- CONTENT start -->
 					<table cellpadding="0" cellspacing="0" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
 <td width="290" valign="top" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;padding:0">
-							<img src="img/ATB.gif" alt="ATB" width="200" height="252" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
+							<img src="img/HitaTS-ATB.gif" alt="Hita" width="200" height="252" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
 </td>
 					</tr></table>
 <table cellpadding="0" cellspacing="0" align="right" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
 <td width="290" valign="top" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;line-height:24px;padding:0">
-							<h1 style="color:#353535;font-family:Helvetica,Arial,sans-serif;font-weight:bold;font-size:18px;letter-spacing:-1px;margin-bottom:6px;margin-top:6px;line-height:18px"><span>Antonio Tenreiro Brochón (1923-2006)</span></h1>
+							<h1 style="color:#353535;font-family:Helvetica,Arial,sans-serif;font-weight:bold;font-size:18px;letter-spacing:-1px;margin-bottom:6px;margin-top:6px;line-height:18px"><span>Imagen fotográfica a pintura</span></h1>
 							<div><p align="justify" style="margin:1em 0;color:#787878;line-height:16px;">
-								 Yo no me considero ningún genio de la pintura ni de nada, simplemente desde niño he pasado por la vida con los ojos muy abiertos y maravillados ante el espectáculo del mundo, el mar, las nubes, los pájaros… mi pintura es a media voz, bastante silenciosa y sin grandes pretensiones que por otra parte debido a mi doble oficio de pintor-arquitecto casi siempre me faltó el tiempo material para cubrir grandes lienzos....
+								 La transferencia de estilo neuronal es una técnica avanzada y fascinante que combina el contenido visual de una imagen con el estilo artístico de otra, utilizando redes neuronales profundas para lograr resultados visuales impresionantes. Esta técnica tiene aplicaciones prácticas en arte, diseño, fotografía y entretenimiento, ofreciendo herramientas poderosas para la creación y modificación de imágenes en diversos contextos.
 							</p></div>
 							<div class="btn" style="color:#FFFFFF;display:block">
 								<table class="textbutton" align="left" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0"><td align="center" width="auto" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#FFF;line-height:24px;padding:1px 14px 1px 14px;background:#336666;display:block;height:24px;vertical-align:top;margin-right:4px;margin-bottom:4px"><a href="http://www.antoniotenreirobrochon.com/colofon" label="read more" style="color:#FFF;background:#336666;text-decoration:none;padding:0;display:inline-block;line-height:20px;font-size:14px;font-weight:100;width:100%">Leer mas</a></td></tr></table>
@@ -202,7 +201,7 @@
 <td width="394" class="small" align="left" valign="top" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;line-height:15px;padding:0;font-size:10px;text-transform:uppercase;word-spacing:-1px;margin-bottom:4px;margin-top:6px">
 								<div><span>Recibes este email porque estas en los contactos de Ramón Tenreiro<br>Si quieres darte de baja: <a href="http://www.tenreiros.com/panel/desinscription.php" style="color:#336666;text-decoration:none;padding:2px 0px">Pinche Aqui</a></span></div>
 								<div><span></span></div>
-								<div><span>© 2018 Ramón Tenreiro - All rights reserved</span></div>
+								<div><span>© 2024 Ramón Tenreiro - All rights reserved</span></div>
 							</td>
 						</tr></table>
 <table cellpadding="0" cellspacing="0" align="right" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
