--- a/DASH/NL4.html
+++ b/DASH/NL4.html
@@ -113,7 +113,7 @@
 <td align="center" style="border-collapse:collapse;color:#787878;line-height:24px;padding:0">
 		<table width="600" cellpadding="0" cellspacing="0" class="wrap" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;background-color:#FAFAFA;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr height="20" style="padding:0">
 <td width="600" align="left" valign="bottom" style="border-collapse:collapse;color:#787878;line-height:24px;padding:0">
-				<div class="preheader" style="line-height:0px;font-size:0px;height:0px;display:none !important;visibility:hidden;text-indent:-9999px">Nueva página web tenreiros.com</div> <div class="small" style="font-size:10px;color:#787878;line-height:15px;text-transform:uppercase;word-spacing:-1px;margin-bottom:4px;margin-top:6px">
+				<div class="preheader" style="line-height:0px;font-size:0px;height:0px;display:none !important;visibility:hidden;text-indent:-9999px">Transferencia Estilo Segovia</div> <div class="small" style="font-size:10px;color:#787878;line-height:15px;text-transform:uppercase;word-spacing:-1px;margin-bottom:4px;margin-top:6px">
 <span></span><a name="top" style="color:#336666;text-decoration:none;padding:2px 10px"></a>
 </div> <div class="small" style="font-size:10px;color:#787878;line-height:15px;text-transform:uppercase;word-spacing:-1px;margin-bottom:4px;margin-top:6px"><span><a href="http://tenreiros.com/panel/templates/NL1.html" style="color:#336666;text-decoration:none;padding:2px 0px">Pinche aquí - si no se ve bien.</a></div>
 			</td>
@@ -136,7 +136,7 @@
 				</tr>
 <tr style="padding:0">
 <td align="left" valign="top" class="h2" style="border-collapse:collapse;color:#353535;font-family:Helvetica,Arial,sans-serif;font-size:19px;font-weight:bold;letter-spacing:-1px;line-height:24px;padding:0">
-					<span>NL-2</span>
+					<span>NL-4</span>
 					</td></tr></table></td></tr>
 </table>
 
@@ -148,9 +148,10 @@
 			<table cellpadding="0" cellspacing="0" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;">
            <tr>
 <td width="600" valign="top" align="left" style="border-collapse:collapse;color:#787878;line-height:24px;padding:0">
-<h1 style="color:#353535;font-family:Helvetica,Arial,sans-serif;font-weight:bold;font-size:18px;margin-bottom:6px;margin-top:6px;line-height:18px;letter-spacing:-1px;"><span>Renovación y actualización de mi página web</span></h1>
+<h1 style="color:#353535;font-family:Helvetica,Arial,sans-serif;font-weight:bold;font-size:18px;margin-bottom:6px;margin-top:6px;line-height:18px;letter-spacing:-1px;"><span>Transferencia Estilo Segovia</span></h1>
 							<div><p align="justify" style="margin:1em 0;color:#787878;line-height:16px;">
-								 Durante este mes he actualizado y renovado mi página web; dotándola de mayor movimiento a través de javascript (home página) y además, para hacerla mas entretenida y jugable - las pinturas, fotografías y juegos- los he integrado en una consola, que permite una navegación más sencilla. Finalmente he añadido un par de juegos más. Te animo a que entres y que veas las novedades. Aunque esta optimizada para teléfono y tablet, el entorno dinámico y los juegos requiere portatil o pc.
+Para este propósito, utilizamos la arquitectura de red neuronal convolucional VGG-19. Esta red fue previamente entrenada en la tarea de reconocimiento y clasificación de imágenes en el banco de imágenes ImageNet con más de 1,2 millones de imágenes.
+Podemos comprobar como la imagen cada vez recoge más el estilo. El programa esta configurado para realizar al menos 1000 iteraciones, pero realizarlas puede tardar más de 4 horas, por lo que para este tutorial, he acotado el código a 300 iteraciones, por lo que las imagenes no representan totalmente el estilo, pero si se pueden ya identificar sin duda alguna.
 							</p></div>
 				</td>
 			</tr></table>
@@ -173,7 +174,7 @@
 		<!-- CONTENT start -->
 					<table cellpadding="0" cellspacing="0" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
 <td width="600" valign="top" align="center" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;padding:0">
-							<img src="img/page.gif" alt="ATB" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
+							<img src="img/SegoviaTS-ATB.gif" alt="ATB" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
 </td>
 					</tr></table>
 <table cellpadding="0" cellspacing="0" align="right" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
@@ -199,7 +200,7 @@
 <td width="394" class="small" align="left" valign="top" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;line-height:15px;padding:0;font-size:10px;text-transform:uppercase;word-spacing:-1px;margin-bottom:4px;margin-top:6px">
 								<div><span>Recibes este email porque estas en los contactos de Ramón Tenreiro<br>Si quieres darte de baja: <a href="http://www.tenreiros.com/panel/desinscription.php" style="color:#336666;text-decoration:none;padding:2px 0px">Pinche Aqui</a></span></div>
 								<div><span></span></div>
-								<div><span>© 2018 Ramón Tenreiro - All rights reserved</span></div>
+								<div><span>© 2024 Ramón Tenreiro - All rights reserved</span></div>
 							</td>
 						</tr></table>
 <table cellpadding="0" cellspacing="0" align="right" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
