--- a/DASH/NL3.html
+++ b/DASH/NL3.html
@@ -150,7 +150,7 @@
 <td width="600" valign="top" align="left" style="border-collapse:collapse;color:#787878;line-height:24px;padding:0">
 <h1 style="color:#353535;font-family:Helvetica,Arial,sans-serif;font-weight:bold;font-size:18px;margin-bottom:6px;margin-top:6px;line-height:18px;letter-spacing:-1px;"><span>Serie Transferencia de Estilo Neuronal - Hita</span></h1>
 							<div><p align="justify" style="margin:1em 0;color:#787878;line-height:16px;">
-								 Imagen gif realizada con las imagenes producidas con el algoritmo de transferencia de estilo, de una imagen fotográfica a estilo de pintura. 						</p></div>
+	La transferencia de estilo neuronal es una técnica avanzada y fascinante que combina el contenido visual de una imagen con el estilo artístico de otra, utilizando redes neuronales profundas para lograr resultados visuales impresionantes. Esta técnica tiene aplicaciones prácticas en arte, diseño, fotografía y entretenimiento, ofreciendo herramientas poderosas para la creación y modificación de imágenes en diversos contextos. Imagen gif realizada con las imagenes producidas con el algoritmo de transferencia de estilo, de una imagen fotográfica a estilo de pintura. 						</p></div>
 				</td>
 			</tr></table>
 </td>
@@ -165,27 +165,10 @@
 <table width="600" cellpadding="0" cellspacing="0" class="wrap" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;background-color:#FAFAFA;font-family:Helvetica,Arial,sans-serif;font-size:1px"><tr style="padding:0"><td width="600" height="2" style="border-collapse:collapse;color:#787878;line-height:24px;padding:0"> </td></tr></table>
 <!-- Separator end   -->
 
-<!-- 1/2 Image on the Left start  --><table width="600" cellpadding="0" cellspacing="0" class="wrap" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;background-color:#FAFAFA;font-family:Helvetica,Arial,sans-serif;font-size:1px"><tr style="padding:0">
-<td width="600" valign="top" align="left" style="border-collapse:collapse;color:#787878;line-height:2px;padding:0">
-				<table cellpadding="0" cellspacing="0" class="o-fix" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:1px"><tr style="padding:0">
-<td width="600" valign="top" align="left" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;line-height:2px;padding:0">
-		<!-- CONTENT start -->
-					<table cellpadding="0" cellspacing="0" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
-<td width="290" valign="top" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;padding:0">
-							<img src="img/HitaTS-ATB.gif" alt="Hita" width="200" height="252" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
+	<img src="img/HitaTS-ATB.gif" alt="Hita" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
 </td>
 					</tr></table>
-<table cellpadding="0" cellspacing="0" align="right" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
-<td width="290" valign="top" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;line-height:24px;padding:0">
-							<h1 style="color:#353535;font-family:Helvetica,Arial,sans-serif;font-weight:bold;font-size:18px;letter-spacing:-1px;margin-bottom:6px;margin-top:6px;line-height:18px"><span>Imagen fotográfica a pintura</span></h1>
-							<div><p align="justify" style="margin:1em 0;color:#787878;line-height:16px;">
-								 La transferencia de estilo neuronal es una técnica avanzada y fascinante que combina el contenido visual de una imagen con el estilo artístico de otra, utilizando redes neuronales profundas para lograr resultados visuales impresionantes. Esta técnica tiene aplicaciones prácticas en arte, diseño, fotografía y entretenimiento, ofreciendo herramientas poderosas para la creación y modificación de imágenes en diversos contextos.
-							</p></div>
-							<div class="btn" style="color:#FFFFFF;display:block">
-								<table class="textbutton" align="left" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0"><td align="center" width="auto" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#FFF;line-height:24px;padding:1px 14px 1px 14px;background:#336666;display:block;height:24px;vertical-align:top;margin-right:4px;margin-bottom:4px"><a href="http://www.antoniotenreirobrochon.com/colofon" label="read more" style="color:#FFF;background:#336666;text-decoration:none;padding:0;display:inline-block;line-height:20px;font-size:14px;font-weight:100;width:100%">Leer mas</a></td></tr></table>
-</div>
-						</td>
-					</tr></table>
+
 </td>
 		<!-- CONTENT end -->
 				</tr></table>
