Update and rename L1 to L1.html

--- a/DASH/L1.html
+++ b/DASH/L1.html
@@ -136,7 +136,7 @@
 				</tr>
 <tr style="padding:0">
 <td align="left" valign="top" class="h2" style="border-collapse:collapse;color:#353535;font-family:Helvetica,Arial,sans-serif;font-size:19px;font-weight:bold;letter-spacing:-1px;line-height:24px;padding:0">
-					<span>NL-2</span>
+					<span>L1</span>
 					</td></tr></table></td></tr>
 </table>
 
@@ -148,9 +148,9 @@
 			<table cellpadding="0" cellspacing="0" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;">
            <tr>
 <td width="600" valign="top" align="left" style="border-collapse:collapse;color:#787878;line-height:24px;padding:0">
-<h1 style="color:#353535;font-family:Helvetica,Arial,sans-serif;font-weight:bold;font-size:18px;margin-bottom:6px;margin-top:6px;line-height:18px;letter-spacing:-1px;"><span>Renovación y actualización de mi página web</span></h1>
+<h1 style="color:#353535;font-family:Helvetica,Arial,sans-serif;font-weight:bold;font-size:18px;margin-bottom:6px;margin-top:6px;line-height:18px;letter-spacing:-1px;"><span> Libros publicados como autor Ramón María Tenreiro</span></h1>
 							<div><p align="justify" style="margin:1em 0;color:#787878;line-height:16px;">
-								 Durante este mes he actualizado y renovado mi página web; dotándola de mayor movimiento a través de javascript (home página) y además, para hacerla mas entretenida y jugable - las pinturas, fotografías y juegos- los he integrado en una consola, que permite una navegación más sencilla. Finalmente he añadido un par de juegos más. Te animo a que entres y que veas las novedades. Aunque esta optimizada para teléfono y tablet, el entorno dinámico y los juegos requiere portatil o pc.
+								 He publicado libros de biografías con el nombre de autor de Ramón María Tenreiro. 
 							</p></div>
 				</td>
 			</tr></table>
@@ -173,8 +173,8 @@
 		<!-- CONTENT start -->
 					<table cellpadding="0" cellspacing="0" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
 <td width="600" valign="top" align="center" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;padding:0">
-							<img src="https://www.tenreiros.com/panel/gallery/page.gif" alt="ATB" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
-</td>
+							<img/pAgustin.png" alt="Agustin" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
+</td><td><img/pPastor.png" alt="Pastor" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block"></td><td><img/pMarques.png" alt="Marques" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block"></td>
 					</tr></table>
 <table cellpadding="0" cellspacing="0" align="right" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
 <td width="600" valign="top" align="center" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;line-height:24px;padding:0">
