--- a/DASH/L1.html
+++ b/DASH/L1.html
@@ -173,8 +173,8 @@
 		<!-- CONTENT start -->
 					<table cellpadding="0" cellspacing="0" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
 <td width="600" valign="top" align="center" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;padding:0">
-							<img/pAgustin.png" alt="Agustin" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
-</td><td><img/pPastor.png" alt="Pastor" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block"></td><td><img/pMarques.png" alt="Marques" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block"></td>
+							<img src="img/pAgustin.png" alt="AGustín" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
+</td>
 					</tr></table>
 <table cellpadding="0" cellspacing="0" align="right" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
 <td width="600" valign="top" align="center" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;line-height:24px;padding:0">
