--- a/DASH/L1.html
+++ b/DASH/L1.html
@@ -173,16 +173,19 @@
 		<!-- CONTENT start -->
 					<table cellpadding="0" cellspacing="0" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
 <td width="600" valign="top" align="center" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;padding:0">
-							<img src="img/pAgustin.png" alt="AGustín" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
+							<img src="img/pAgustin.png" alt="Agustin" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
 </td>
 					</tr></table>
-<table cellpadding="0" cellspacing="0" align="right" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
-<td width="600" valign="top" align="center" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;line-height:24px;padding:0">
-							<h1 style="color:#353535;font-family:Helvetica,Arial,sans-serif;font-weight:bold;font-size:18px;letter-spacing:-1px;margin-bottom:6px;margin-top:6px;line-height:18px"><span>Página web https://www.tenreiros.com</span></h
-							><div class="btn" style="color:#FFFFFF;display:block">
-								<table class="textbutton" align="center" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0"><td align="center" width="auto" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#FFF;line-height:24px;padding:1px 14px 1px 14px;background:#336666;display:block;height:24px;vertical-align:top;margin-right:4px;margin-bottom:4px"><a href="https://www.tenreiros.com/indexes.html" label="read more" style="color:#FFF;background:#336666;text-decoration:none;padding:0;display:inline-block;line-height:20px;font-size:14px;font-weight:100;width:100%">Entrar</a></td></tr></table>
-</div>
-						</td>
+
+<table cellpadding="0" cellspacing="0" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
+<td width="600" valign="top" align="center" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;padding:0">
+							<img src="img/pAgustin.png" alt="Agustin" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
+</td>
+					</tr></table>	
+	<table cellpadding="0" cellspacing="0" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
+<td width="600" valign="top" align="center" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;padding:0">
+							<img src="img/pAgustin.png" alt="Agustin" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
+</td>
 					</tr></table>
 </td>
 		<!-- CONTENT end -->
