--- a/DASH/NL3.html
+++ b/DASH/NL3.html
@@ -165,7 +165,7 @@
 <table width="600" cellpadding="0" cellspacing="0" class="wrap" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;background-color:#FAFAFA;font-family:Helvetica,Arial,sans-serif;font-size:1px"><tr style="padding:0"><td width="600" height="2" style="border-collapse:collapse;color:#787878;line-height:24px;padding:0"> </td></tr></table>
 <!-- Separator end   -->
 
-	<img src="img/HitaTS-ATB.gif" alt="Hita" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
+	<img src="img/HitaTS-ATB.gif" alt="Hita" width="800" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
 </td>
 					</tr></table>
 
