--- a/DASH/L2.html
+++ b/DASH/L2.html
@@ -113,16 +113,16 @@
 <td align="center" style="border-collapse:collapse;color:#787878;line-height:24px;padding:0">
 		<table width="600" cellpadding="0" cellspacing="0" class="wrap" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;background-color:#FAFAFA;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr height="20" style="padding:0">
 <td width="600" align="left" valign="bottom" style="border-collapse:collapse;color:#787878;line-height:24px;padding:0">
-				<div class="preheader" style="line-height:0px;font-size:0px;height:0px;display:none !important;visibility:hidden;text-indent:-9999px">Nueva página web tenreiros.com</div> <div class="small" style="font-size:10px;color:#787878;line-height:15px;text-transform:uppercase;word-spacing:-1px;margin-bottom:4px;margin-top:6px">
+				<div class="preheader" style="line-height:0px;font-size:0px;height:0px;display:none !important;visibility:hidden;text-indent:-9999px">Libros Ramón María Tenreiro</div> <div class="small" style="font-size:10px;color:#787878;line-height:15px;text-transform:uppercase;word-spacing:-1px;margin-bottom:4px;margin-top:6px">
 <span></span><a name="top" style="color:#336666;text-decoration:none;padding:2px 10px"></a>
-</div> <div class="small" style="font-size:10px;color:#787878;line-height:15px;text-transform:uppercase;word-spacing:-1px;margin-bottom:4px;margin-top:6px"><span><a href="http://tenreiros.com/panel/templates/NL1.html" style="color:#336666;text-decoration:none;padding:2px 0px">Pinche aquí - si no se ve bien.</a></div>
+</div> <div class="small" style="font-size:10px;color:#787878;line-height:15px;text-transform:uppercase;word-spacing:-1px;margin-bottom:4px;margin-top:6px"><span><a href="https://rtenreiro.github.io/DASH/NL1.html" style="color:#336666;text-decoration:none;padding:2px 0px">Pinche aquí - si no se ve bien.</a></div>
 			</td>
 		</tr></table>
 <table width="600" cellpadding="0" cellspacing="0" class="wrap line" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;background-color:#FAFAFA;border-bottom:1px solid #AAAAAA;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0"><td width="600" height="1" style="border-collapse:collapse;color:#787878;line-height:1px;padding:0"> </td></tr></table>
 <table width="600" cellpadding="0" cellspacing="0" class="wrap" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;background-color:#FAFAFA;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0"><td style="border-collapse:collapse;color:#787878;line-height:24px;padding:0">
 			<table cellpadding="0" cellspacing="0" align="right" class="m-w-auto" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
 <td valign="top" align="right" width="600" class="small label" style="border-collapse:collapse;color:#787878;line-height:15px;padding:0;font-size:10px;text-transform:uppercase;word-spacing:-1px;margin-bottom:4px;margin-top:6px">
-				<table class="textbutton" align="right" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px;width:auto !important"><tr style="padding:0"><td align="center" width="auto" style="border-collapse:collapse;color:#FFF;line-height:24px;padding:1px 14px 1px 14px;background:#336666;display:block;height:auto !important;vertical-align:top;margin-right:4px;margin-bottom:4px"><a href="http://tenreiros.com/contactes.html" label="Go to top" style="color:#FFF;text-decoration:none;padding:2px 0 !important;font-size:12px !important;font-weight:100;line-height:20px;width:100%;display:inline-block">Noticias:  08/2018</a></td></tr></table>
+				<table class="textbutton" align="right" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px;width:auto !important"><tr style="padding:0"><td align="center" width="auto" style="border-collapse:collapse;color:#FFF;line-height:24px;padding:1px 14px 1px 14px;background:#336666;display:block;height:auto !important;vertical-align:top;margin-right:4px;margin-bottom:4px"><a href="http://tenreiros.com/contactes.html" label="Go to top" style="color:#FFF;text-decoration:none;padding:2px 0 !important;font-size:12px !important;font-weight:100;line-height:20px;width:100%;display:inline-block">Publicaciones a:  09/2024</a></td></tr></table>
 </td>
 			</tr></table>
 </td></tr></table>
@@ -136,7 +136,7 @@
 				</tr>
 <tr style="padding:0">
 <td align="left" valign="top" class="h2" style="border-collapse:collapse;color:#353535;font-family:Helvetica,Arial,sans-serif;font-size:19px;font-weight:bold;letter-spacing:-1px;line-height:24px;padding:0">
-					<span>NL-2</span>
+					<span>L1</span>
 					</td></tr></table></td></tr>
 </table>
 
@@ -148,9 +148,9 @@
 			<table cellpadding="0" cellspacing="0" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;">
            <tr>
 <td width="600" valign="top" align="left" style="border-collapse:collapse;color:#787878;line-height:24px;padding:0">
-<h1 style="color:#353535;font-family:Helvetica,Arial,sans-serif;font-weight:bold;font-size:18px;margin-bottom:6px;margin-top:6px;line-height:18px;letter-spacing:-1px;"><span>Renovación y actualización de mi página web</span></h1>
+<h1 style="color:#353535;font-family:Helvetica,Arial,sans-serif;font-weight:bold;font-size:18px;margin-bottom:6px;margin-top:6px;line-height:18px;letter-spacing:-1px;"><span> Libros publicados como autor Ramón María Tenreiro</span></h1>
 							<div><p align="justify" style="margin:1em 0;color:#787878;line-height:16px;">
-								 Durante este mes he actualizado y renovado mi página web; dotándola de mayor movimiento a través de javascript (home página) y además, para hacerla mas entretenida y jugable - las pinturas, fotografías y juegos- los he integrado en una consola, que permite una navegación más sencilla. Finalmente he añadido un par de juegos más. Te animo a que entres y que veas las novedades. Aunque esta optimizada para teléfono y tablet, el entorno dinámico y los juegos requiere portatil o pc.
+								 He publicado libros de biografías con el nombre de autor de Ramón María Tenreiro. 
 							</p></div>
 				</td>
 			</tr></table>
@@ -173,16 +173,19 @@
 		<!-- CONTENT start -->
 					<table cellpadding="0" cellspacing="0" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
 <td width="600" valign="top" align="center" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;padding:0">
-							<img src="https://www.tenreiros.com/panel/gallery/page.gif" alt="ATB" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
+							<img src="img/pAgustin.png" alt="Agustin" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
 </td>
-					</tr></table>
-<table cellpadding="0" cellspacing="0" align="right" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
-<td width="600" valign="top" align="center" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;line-height:24px;padding:0">
-							<h1 style="color:#353535;font-family:Helvetica,Arial,sans-serif;font-weight:bold;font-size:18px;letter-spacing:-1px;margin-bottom:6px;margin-top:6px;line-height:18px"><span>Página web https://www.tenreiros.com</span></h
-							><div class="btn" style="color:#FFFFFF;display:block">
-								<table class="textbutton" align="center" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0"><td align="center" width="auto" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#FFF;line-height:24px;padding:1px 14px 1px 14px;background:#336666;display:block;height:24px;vertical-align:top;margin-right:4px;margin-bottom:4px"><a href="https://www.tenreiros.com/indexes.html" label="read more" style="color:#FFF;background:#336666;text-decoration:none;padding:0;display:inline-block;line-height:20px;font-size:14px;font-weight:100;width:100%">Entrar</a></td></tr></table>
-</div>
-						</td>
+					</tr></table><table><td></td></table>
+
+<table cellpadding="0" cellspacing="0" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
+<td width="600" valign="top" align="center" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;padding:0">
+							<img src="img/pPastor.png" alt="Banco Pastor" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
+</td>
+					</tr></table><table><td></td></table>
+	<table cellpadding="0" cellspacing="0" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
+<td width="600" valign="top" align="center" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;padding:0">
+							<img src="img/pMarques.png" alt="Marques de Tilly" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
+</td>
 					</tr></table>
 </td>
 		<!-- CONTENT end -->
@@ -199,7 +202,7 @@
 <td width="394" class="small" align="left" valign="top" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;line-height:15px;padding:0;font-size:10px;text-transform:uppercase;word-spacing:-1px;margin-bottom:4px;margin-top:6px">
 								<div><span>Recibes este email porque estas en los contactos de Ramón Tenreiro<br>Si quieres darte de baja: <a href="http://www.tenreiros.com/panel/desinscription.php" style="color:#336666;text-decoration:none;padding:2px 0px">Pinche Aqui</a></span></div>
 								<div><span></span></div>
-								<div><span>© 2018 Ramón Tenreiro - All rights reserved</span></div>
+								<div><span>© 2024 Ramón Tenreiro - All rights reserved</span></div>
 							</td>
 						</tr></table>
 <table cellpadding="0" cellspacing="0" align="right" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
