--- a/DASH/L2.html
+++ b/DASH/L2.html
@@ -150,7 +150,7 @@
 <td width="600" valign="top" align="left" style="border-collapse:collapse;color:#787878;line-height:24px;padding:0">
 <h1 style="color:#353535;font-family:Helvetica,Arial,sans-serif;font-weight:bold;font-size:18px;margin-bottom:6px;margin-top:6px;line-height:18px;letter-spacing:-1px;"><span> Libros publicados como autor Ramón María Tenreiro</span></h1>
 							<div><p align="justify" style="margin:1em 0;color:#787878;line-height:16px;">
-								 He publicado libros de biografías con el nombre de autor de Ramón María Tenreiro. 
+								 He publicado libros de Inteligencia Artificial con el nombre de autor de Ramón Tenreiro. 
 							</p></div>
 				</td>
 			</tr></table>
@@ -173,18 +173,18 @@
 		<!-- CONTENT start -->
 					<table cellpadding="0" cellspacing="0" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
 <td width="600" valign="top" align="center" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;padding:0">
-							<img src="img/pAgustin.png" alt="Agustin" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
+							<img src="img/pML.png" alt="Machine Learning" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
 </td>
 					</tr></table><table><td></td></table>
 
 <table cellpadding="0" cellspacing="0" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
 <td width="600" valign="top" align="center" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;padding:0">
-							<img src="img/pPastor.png" alt="Banco Pastor" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
+							<img src="img/pAIP.png" alt="Banco Pastor" width="900" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
 </td>
 					</tr></table><table><td></td></table>
 	<table cellpadding="0" cellspacing="0" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
 <td width="600" valign="top" align="center" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;padding:0">
-							<img src="img/pMarques.png" alt="Marques de Tilly" width="600" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
+							<img src="img/libro.jpg.png" alt="RAMA" width="900" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
 </td>
 					</tr></table>
 </td>
@@ -208,8 +208,8 @@
 <table cellpadding="0" cellspacing="0" align="right" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
 <td width="187" class="small social" align="right" valign="top" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;line-height:15px;padding:0;font-size:10px;text-transform:uppercase;word-spacing:-1px;margin-bottom:4px;margin-top:6px">
 								<div>
-									<a href="https://www.linkedin.com/in/rtenreiro/" style="color:#336666;text-decoration:none;padding:2px 0px"><img src="http://www.tenreiros.com/panel/gallery/in.jpg" alt="" width="32" height="32" border="0" style="max-width:100%;max-height:32px;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:inline;border:none;margin:0"></a>
-									<a href="https://www.facebook.com/RAMONTENREIRO" style="color:#336666;text-decoration:none;padding:2px 0px"><img src="http://www.tenreiros.com/panel/gallery/facebook.jpg" alt="" width="32" height="32" border="0" style="max-width:100%;max-height:32px;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:inline;border:none;margin:0"></a>
+									<a href="https://www.linkedin.com/in/rtenreiro/" style="color:#336666;text-decoration:none;padding:2px 0px"><img src="images/in.jpg" alt="" width="32" height="32" border="0" style="max-width:100%;max-height:32px;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:inline;border:none;margin:0"></a>
+									<a href="https://www.facebook.com/RAMONTENREIRO" style="color:#336666;text-decoration:none;padding:2px 0px"><img src="images/facebook.jpg" alt="" width="32" height="32" border="0" style="max-width:100%;max-height:32px;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:inline;border:none;margin:0"></a>
 								</div>
 							</td>
 						</tr></table>
